test/spec_vectors/simd_i16x8_arith/fail/module_11.wat
(module (func $i16x8.mul-arg-empty (result v128) (i16x8.mul)))